# elegy-made

./: .gitignore  pyproject.toml
elegy_made/: linear.py  made_test.py
training/: experiment.py  experiment.sh  made.py
