[tool.poetry]
name = "elegy-made"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
elegy = {path = "../elegy"}
debugpy = "^1.0.0-rc.2"
dataget = "^0.4.15"
matplotlib = "^3.3.2"
scikit-learn = "^0.23.2"
seaborn = "^0.11.0"
einops = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
